tests/spec/emit/snapshots/builtin_ordered_bound_lowers_to_cmp_ordered_with_import.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn id<T: Ordered>(x: T) -> T {
    x
  }
  
  fn main() {
    let _ = id(1)
  }
---
package main

import "cmp"

func id[T cmp.Ordered](x T) T {
	return x
}

func main() {
	id(1)
}
