tests/spec/emit/snapshots/builtin_panic.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test() {
    panic("something went wrong")
  }
---
package main

func test() {
	panic("something went wrong")
}
