tests/spec/emit/snapshots/builtin_panic_in_branch.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(x: int) -> int {
    if x < 0 {
      panic("negative value")
    } else {
      x
    }
  }
---
package main

func test(x int) int {
	if x < 0 {
		panic("negative value")
	}
	return x
}
