tests/spec/emit/snapshots/builtin_panic_with_error.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(err: error) {
    panic(err)
  }
---
package main

func test(err error) {
	panic(err)
}
