tests/spec/emit/snapshots/builtin_real.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(c: complex128) -> float64 {
    real(c)
  }
---
package main

func test(c complex128) float64 {
	return real(c)
}
