tests/spec/emit/snapshots/byte_at_on_ref_receiver_is_parenthesized.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn first(r: Ref<string>) -> byte {
    r.byte_at(0)
  }
---
package main

func first(r *string) byte {
	return (*r)[0]
}
