tests/spec/emit/snapshots/call_args_carrier_struct_ref_eval_order.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Carrier { p: mut Ref<int> }
  
  fn bump(c: mut Carrier) -> int {
    c.p.* = 1
    9
  }
  
  fn first(a: int, _b: int) -> int { a }
  
  fn main() {
    let mut i = 0
    let m = [[10], [20]]
    let mut c = Carrier { p: &i }
    let x = first(m[i][0], [bump(c)][0])
    let _ = x
  }
---
package main

type Carrier struct {
	p *int
}

func bump(c Carrier) int {
	*c.p = 1
	return 9
}

func first(a, _ int) int {
	return a
}

func main() {
	i := 0
	m := [][]int{{10}, {20}}
	c := Carrier{p: &i}
	arg := m[i][0]
	x := first(arg, []int{bump(c)}[0])
	_ = x
}
