tests/spec/emit/snapshots/call_callee_eval_order_propagate_arg.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn make_f(i: Ref<int>) -> fn(int) -> int {
    |x: int| -> int { x }
  }
  
  fn get(i: mut Ref<int>) -> Result<int, string> {
    i.* = 1
    Ok(7)
  }
  
  fn run() -> Result<int, string> {
    let mut i = 0
    let y = make_f(&i)(get(&i)?)
    Ok(y)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func makeF(_ *int) func(int) int {
	return func(x int) int {
		return x
	}
}

func get(i *int) lisette.Result[int, string] {
	*i = 1
	return lisette.MakeResultOk[int, string](7)
}

func run() lisette.Result[int, string] {
	i := 0
	callee_2 := makeF(&i)
	check_1 := get(&i)
	if check_1.Tag != lisette.ResultOk {
		return check_1
	}
	y := callee_2(check_1.OkVal)
	return lisette.MakeResultOk[int, string](y)
}
